crates/iroha_telemetry_derive/tests/ui_fail/not_return_result.stderr
error: Should return `Result`. Found MyNotResult
 --> tests/ui_fail/not_return_result.rs:8:54
  |
8 | fn execute(_state_transaction: &StateTransaction) -> MyNotResult {
  |                                                      ^^^^^^^^^^^
